# ancientfiles

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
ancient/: __init__.py  core.py  version.py
ancient/locale/es/LC_MESSAGES/: ancient.mo
ancientfiles/: __init__.py  core.py  poethepoet.py  version.py
ancientfiles/locale/: ancientfiles.pot  es.po
ancientfiles/locale/es/LC_MESSAGES/: ancientfiles.mo
doc/: Doxyfile
locale/: ancient.pot  ancientfiles.pot  es.po
